--- a/style.css
+++ b/style.css
@@ -298,7 +298,6 @@ a{
 
 }
 
-
     /* header */
 
 .encabezado{
@@ -347,6 +346,8 @@ a{
     font-size: 50px;
     line-height:50px;
     margin-bottom: 10px;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
 }
 
 .subtitulo_home{
@@ -354,6 +355,8 @@ a{
     font-size: 26px;
     color: #8DA47C;
     text-align: center;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
 }
 
 .botones{
@@ -367,6 +370,8 @@ a{
     background-color: #8DA47C;
     border: none;
     margin-top: 15px;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
   
 }
 
@@ -478,6 +483,8 @@ a{
     width: 45%;
     margin-left: 2%;
     padding-top: 50px;
+    animation: fadeInLeft; 
+    animation-duration: 2s; 
   
 }
 
@@ -504,12 +511,16 @@ a{
 .servicios_centrado{
     width: 35vw;
     position: relative;
+    animation: fadeIn;
+    animation-duration: 2s; 
     
 }
 .servicios_centrado_2{
     width: 35vw;
     position: relative;
     margin-left: 5vw;
+    animation: fadeIn; 
+    animation-duration: 2s;
     
 }
 
@@ -1379,6 +1390,8 @@ margin-top: 0%;
     font-size: 42px;
     line-height:50px;
     margin-bottom: 10px;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
 }
 
 .subtitulo_home{
@@ -1386,6 +1399,8 @@ margin-top: 0%;
     font-size: 20px;
     color: #8DA47C;
     text-align: center;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
 }
 
 .botones{
@@ -1399,6 +1414,8 @@ margin-top: 0%;
     background-color: #8DA47C;
     border: none;
     margin-top: 15px;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
   
 }
 
@@ -1511,8 +1528,9 @@ margin-top: 0%;
     width: 45%;
     margin-left: 2%;
     padding-top: 50px;
+    animation: fadeInLeft; 
+    animation-duration: 2s; 
     
-   
 }
 
 .estudio_imagen{
@@ -1538,12 +1556,16 @@ margin-top: 0%;
 .servicios_centrado{
     width: 35vw;
     position: relative;
+    animation: fadeIn;
+    animation-duration: 2s; 
     
 }
 .servicios_centrado_2{
     width: 35vw;
     position: relative;
     margin-left: 5vw;
+    animation: fadeIn;
+    animation-duration: 2s; 
     
 }
 
@@ -2411,6 +2433,8 @@ margin-top: 0%;
     font-size: 34px;
     line-height:30px;
     margin-bottom: 10px;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
 }
 
 .subtitulo_home{
@@ -2418,6 +2442,8 @@ margin-top: 0%;
     font-size: 18px;
     color: #8DA47C;
     text-align: center;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
 }
 
 .botones{
@@ -2431,6 +2457,8 @@ margin-top: 0%;
     background-color: #8DA47C;
     border: none;
     margin-top: 15px;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
   
 }
 
@@ -2542,7 +2570,8 @@ margin-top: 0%;
 .texto_contenedor{
     width: 70%;
     padding-top: 30px;
-    
+    animation: fadeInLeft; 
+    animation-duration: 2s; 
    
 }
 
@@ -2570,12 +2599,16 @@ margin-top: 0%;
 .servicios_centrado{
     width: 35vw;
     position: relative;
+    animation: fadeIn;
+    animation-duration: 2s; 
     
 }
 .servicios_centrado_2{
     width: 35vw;
     position: relative;
     margin-left: 5vw;
+    animation: fadeIn;
+    animation-duration: 2s; 
     
 }
 
@@ -3459,6 +3492,8 @@ margin-top: 0%;
     font-size: 30px;
     line-height:30px;
     margin-bottom: 10px;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
 }
 
 .subtitulo_home{
@@ -3466,6 +3501,8 @@ margin-top: 0%;
     font-size: 16px;
     color: #8DA47C;
     text-align: center;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
 }
 
 .botones{
@@ -3479,6 +3516,8 @@ margin-top: 0%;
     background-color: #8DA47C;
     border: none;
     margin-top: 15px;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
   
 }
 
@@ -3588,8 +3627,9 @@ margin-top: 0%;
 .texto_contenedor{
     width: 70%;
     padding-top: 30px;
+    animation: fadeInLeft; 
+    animation-duration: 2s; 
     
-   
 }
 
 .estudio_imagen{
@@ -3617,11 +3657,15 @@ margin-top: 0%;
     width: 80%;
     position: relative;
     margin-top: 5%;
+    animation: fadeIn;
+    animation-duration: 2s; 
     
 }
 .servicios_centrado_2{
     width: 80%;
     position: relative;
+    animation: fadeIn;
+    animation-duration: 2s; 
   
 }
 
@@ -4507,6 +4551,8 @@ margin-top: 0%;
     font-size: 26px;
     line-height:30px;
     margin-bottom: 10px;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
 }
 
 .subtitulo_home{
@@ -4514,6 +4560,8 @@ margin-top: 0%;
     font-size: 15px;
     color: #8DA47C;
     text-align: center;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
 }
 
 .botones{
@@ -4527,6 +4575,8 @@ margin-top: 0%;
     background-color: #8DA47C;
     border: none;
     margin-top: 15px;
+    animation: fadeInDown; 
+    animation-duration: 2s; 
   
 }
 
@@ -4637,6 +4687,8 @@ margin-top: 0%;
 .texto_contenedor{
     width: 70%;
     padding-top: 30px;
+    animation: fadeInLeft; 
+    animation-duration: 2s; 
        
 }
 
@@ -4665,11 +4717,15 @@ margin-top: 0%;
     width: 80%;
     position: relative;
     margin-top: 30px;
+    animation: fadeIn;
+    animation-duration: 2s; 
     
 }
 .servicios_centrado_2{
     width: 80%;
     position: relative;
+    animation: fadeIn;
+    animation-duration: 2s; 
   
 }
 
